--- a/Matrizapp/src/app/componentes/rkmain/rkc/rkc.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkc/rkc.component.html
@@ -405,7 +405,7 @@
                                             <img
                                             class="img-circle"
                                             [src]= rutaImgAdd
-                                            title="Copiar Jerarquia"
+                                            title="Añadir Item"
                                             style="width: 15px; height: 15px"
                                           />
                                         </button>
@@ -416,7 +416,7 @@
                                             <img
                                             class="img-circle"
                                             [src]= rutaImgAdd
-                                            title="Copiar Jerarquia"
+                                            title="Añadir Item"
                                             style="width: 15px; height: 15px"
                                           />
                                         </button>
@@ -424,7 +424,7 @@
                                             <img
                                             class="img-circle"
                                             src="assets/images/copy.png"
-                                            title="Copiar Jerarquia"
+                                            title="Copiar CheckList"
                                             style="width: 15px; height: 15px"
                                           />
                                         </button>
@@ -435,7 +435,7 @@
                                             <img
                                             class="img-circle"
                                             [src]= rutaImgAdd
-                                            title="Copiar Jerarquia"
+                                            title="Añadir Item"
                                             style="width: 15px; height: 15px"
                                           />
                                         </button>
@@ -443,7 +443,7 @@
                                             <img
                                             class="img-circle"
                                             [src]= rutaImgPaste
-                                            title="Copiar Jerarquia"
+                                            title="Copiar ChechkList"
                                             style="width: 15px; height: 15px"
                                           />
                                         </button>
