ultima version funcional con cambios

--- a/Matrizapp/src/app/componentes/componentes.component.html
+++ b/Matrizapp/src/app/componentes/componentes.component.html
@@ -1,8 +1,8 @@
 <!-- <my-app-sidenav></my-app-sidenav> -->
 
-<section id="page-container" class="app-page-container">
+<section id="page-container" class="app-page-container w-100">
     <my-app-header></my-app-header>
-    <div style="padding-top: 28px;">
+    <div style="padding-top: 0;">
         <div class="app-content">
             <div class="full-height">
 
