--- a/Matrizapp/src/app/login/login.component.html
+++ b/Matrizapp/src/app/login/login.component.html
@@ -6,7 +6,7 @@
                     <div class="top-nav-left">
                         <a [routerLink]="['/login']"><img src="assets/images/logo_collahuasi.png" style="width: 100px; height: 40px;"></a>
                     </div>
-                    <div class="top-nav-right"><b style="font-size: 10px;">Matriz de Riesgos <br> desarrollo</b></div>
+                    <div class="top-nav-right"><b style="font-size: 10px;">Matriz de Riesgos <br> {{ambiente}}</b></div>
                 </div>
 
 
