--- a/Matrizapp/src/app/layout/header/header.component.html
+++ b/Matrizapp/src/app/layout/header/header.component.html
@@ -24,12 +24,12 @@
             <!-- <li class="nav-item">
                 <a (click)="cambiarClave()"><button style="color: #175641 "   mat-button class="mat-button header-btn" myOpenSearchOverlay><mat-icon mat-list-icon style="color: #175641 " title='Help'>summarize</mat-icon></button> </a>
             </li> -->
-            <button mat-button [matMenuTriggerFor]="beforeMenu">Reporte</button>
+            <!-- <button mat-button [matMenuTriggerFor]="beforeMenu">Reporte</button>
             <mat-menu #beforeMenu="matMenu" xPosition="before">
                 <button mat-menu-item>Items Pendientes por Enviar a Validar</button>
                 <button mat-menu-item>Items Pendientes por Validar</button>
                 <button mat-menu-item>Items Pendientes por Aprobar</button>
-            </mat-menu>
+            </mat-menu> -->
             <li class="nav-item">
                 <button style="color: #175641" (click)="logout()" mat-button class="mat-button header-btn" myOpenSearchOverlay>
           <mat-icon mat-list-icon style="color: #175641">exit_to_app</mat-icon
