--- a/Matrizapp/src/app/AddPages/addrka/addrka.component.html
+++ b/Matrizapp/src/app/AddPages/addrka/addrka.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
+<!-- <h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
 <form name="rka_form" class="form-validation" (ngSubmit)="!areaControl.hasError('required') && rkaForm.form.valid && guardar()" #rkaForm="ngForm" noValidate>
     <div class="row">
         <div class="col-xl-7">
@@ -28,4 +28,62 @@
             </button>
         <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
     </mat-dialog-actions>
-</form>
+</form> -->
+<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
+<mat-dialog-content>
+    <div class="row">
+        <div class="col-xl-12">
+            <mat-form-field class="example-chip-list">
+    
+                <mat-chip-list #chipList>
+                    <mat-chip *ngFor="let fruit of areasListSeleccionadas" [selectable]="true"
+                             [removable]="removable" (removed)="remove(fruit)">
+                      {{fruit.Descripcion}}
+                      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    </mat-chip>
+                </mat-chip-list>
+            </mat-form-field>
+        </div>
+        <div class="col-xl-12">
+        
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" [disabled]="bloquearFiltro">
+    
+        </mat-form-field>
+        <mat-progress-bar *ngIf="isLoading" style="width: 100%" mode="buffer"></mat-progress-bar>
+        <div class="box box-default table-box table-responsive mdl-shadow--2dp" style="height: 270px;">
+            <table mat-table [dataSource]="datasource2" class="mat-elevation-z4">
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+        
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox [(ngModel)]="row.selected" (change)="seleccionar(row.Id)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="Id">
+                    <th mat-header-cell *matHeaderCellDef>Codigo</th>
+                    <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Descripcion">
+                    <th mat-header-cell *matHeaderCellDef> Descripcion</th>
+                    <td mat-cell *matCellDef="let element">{{element.Descripcion}}</td>
+                </ng-container>
+        
+                <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+                <tr mat-row *matRowDef="let row; columns:columnas"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[10]" (page)="pageEvents($event)"></mat-paginator>
+        </div>
+        
+        </div>
+    </div>
+</mat-dialog-content>
+
+    <mat-dialog-actions align="end">
+        <button mat-raised-button color="primary" (click)="guardar()">{{ data.button_confirm }}</button>
+        <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
+    </mat-dialog-actions>
+
+
