--- a/Matrizapp/src/app/AddPages/addrka/addrka.component.scss
+++ b/Matrizapp/src/app/AddPages/addrka/addrka.component.scss
@@ -38,21 +38,21 @@ h4 {
     font-family: 'collahuasi';
 }
 
-.mat-input-element {
-    font: inherit;
-    background: 0 0;
-    color: currentColor;
-    border: 1px solid black;
-    outline: 0;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    max-width: 100%;
-    vertical-align: bottom;
-    text-align: left;
-    padding-left: 10px;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
+// .mat-input-element {
+//     font: inherit;
+//     background: 0 0;
+//     color: currentColor;
+//     border: 1px solid black;
+//     outline: 0;
+//     padding: 0;
+//     margin: 0;
+//     width: 100%;
+//     max-width: 100%;
+//     vertical-align: bottom;
+//     text-align: left;
+//     padding-left: 10px;
+//     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+// }
 
 .mat-select-search-inside-mat-option,
 .mat-dialog-actions {
@@ -76,3 +76,14 @@ mat-label {
         justify-content: center;
     }
 }
+
+
+//Nueva Forma de Agregar
+
+table {
+    width: 100%;
+  }
+  
+  .example-chip-list {
+    width: 100%;
+  }
