--- a/Matrizapp/src/app/AddPages/addrky/addrky.component.html
+++ b/Matrizapp/src/app/AddPages/addrky/addrky.component.html
@@ -1,128 +1,184 @@
 <h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
-<form name="rky_form" class="form-validation" (ngSubmit)="  !riesgoPuroSControl.hasError('required') && !riesgoPuroPControl.hasError('required') && !consecuenciaControl.hasError('required') && rkyForm.form.valid && guardar()" #rkyForm="ngForm" noValidate>
-    <div class="row">
-        <div class="col-xl-7">
+
+<mat-horizontal-stepper [linear]="isLinear" >
+    <mat-step label="Selecciona la/s Consecuencia/s" state="phone">
+        <div class="row">
+            <div class="col-xl-12">
+                <mat-form-field class="example-chip-list">
+        
+                    <mat-chip-list #chipList>
+                        <mat-chip *ngFor="let fruit of areasListSeleccionadas" [selectable]="true"
+                                 [removable]="removable" (removed)="remove(fruit)">
+                          {{fruit.Descripcion}}
+                          <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                        </mat-chip>
+                    </mat-chip-list>
+                </mat-form-field>
+            </div>
+            <div class="col-xl-12">
+            
             <mat-form-field>
-                <!-- <mat-label>Seleccione una Consecuencia</mat-label> -->
-                <mat-select [formControl]="consecuenciaControl" placeholder="Seleccione una Consecuencia" required [(ngModel)]="consecuenciaModel.consecuenciaId" #consecuenciaId multiple>
-                    <!-- <input  matInput   id='busqueda '  style="height: 18px;"   (keydown)="Buscar($event)" type="text" [(ngModel)]="consecuenciaModel.name" name='name' value={{consecuenciaModel.name}} placeholder="search"> -->
-                    <mat-option style="height: 50px !important;">
-
-                        <ngx-mat-select-search [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
-                    </mat-option>
-
-                    <mat-option *ngFor="let item of consecuenciasList|filterPipe:descripcion" [value]="item.Id">{{item.Descripcion}}</mat-option>
-                </mat-select>
-                <!-- <mat-error *ngIf="consecuenciaControl.hasError('required')">No ha seleccionado una Consecuencia</mat-error> -->
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" [disabled]="bloquearFiltro">
+        
             </mat-form-field>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xl-6">
-            <br />
-            <div><b>Riesgo puro</b>
+            <mat-progress-bar *ngIf="isLoading" style="width: 100%" mode="buffer"></mat-progress-bar>
+            <div class="box box-default table-box table-responsive mdl-shadow--2dp" style="height: 270px;">
+                <table mat-table [dataSource]="datasource" class="mat-elevation-z4">
+                    <ng-container matColumnDef="select">
+                        <th mat-header-cell *matHeaderCellDef>
+            
+                        </th>
+                        <td mat-cell *matCellDef="let row">
+                            <mat-checkbox [(ngModel)]="row.selected" (change)="seleccionar(row.Id)">
+                            </mat-checkbox>
+                        </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Id">
+                        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+                        <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="Descripcion">
+                        <th mat-header-cell *matHeaderCellDef> Descripcion</th>
+                        <td mat-cell *matCellDef="let element">{{element.Descripcion}}</td>
+                    </ng-container>
+            
+                    <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+                    <tr mat-row *matRowDef="let row; columns:columnas"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[10]" ></mat-paginator>
             </div>
-            <div class="box box-default">
-                <div class="box-body">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-9">
-                                <mat-form-field>
-                                    <mat-label>Probabilidad</mat-label>
-                                    <mat-select [formControl]="riesgoPuroPControl" (selectionChange)="Criticidad()" required [(ngModel)]="consecuenciaModel.riesgoPuroP" #riesgoPuroP>
+            <!-- <div mat-dialog-actions align="end">
+                <button mat-icon-button color="accent" *ngIf="areasListSeleccionadas.length > 0" matStepperNext>
+                    <mat-icon aria-label="Evaluar Consecuencia">fact_check</mat-icon>
+                    evaluar Consecuencia/as
+                  </button>
+                <button mat-icon-button color="accent" *ngIf="areasListSeleccionadas.length === 0" disabled>
+                    <mat-icon aria-label="Evaluar Consecuencia">fact_check</mat-icon>
+                    evaluar Consecuencia/as
+                  </button>
+                
+            </div> -->
+            </div>
 
-                                        <mat-option *ngFor="let item of probabilidadList" [value]="item.Id">{{item.Descripcion}}</mat-option>
-                                    </mat-select>
-                                    <mat-error *ngIf="riesgoPuroPControl.hasError('required')">No ha seleccionado la Probabilidad</mat-error>
-                                </mat-form-field>
+
+        </div>
+    </mat-step>
+    
+    <mat-step label="Evaluar Riesgo Puro y Residual" state="chat">
+        <div class="row">
+            <div class="col-xl-6">
+                <br />
+                <div><b>Riesgo puro</b>
+                </div>
+                <div class="box box-default">
+                    <div class="box-body">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <mat-form-field>
+                                        <mat-label>Probabilidad</mat-label>
+                                        <mat-select [formControl]="riesgoPuroPControl" (selectionChange)="Criticidad()" required [(ngModel)]="consecuenciaModel.riesgoPuroP" #riesgoPuroP>
+    
+                                            <mat-option *ngFor="let item of probabilidadList" [value]="item.Id">{{item.Descripcion}}</mat-option>
+                                        </mat-select>
+                                        <mat-error *ngIf="riesgoPuroPControl.hasError('required')">No ha seleccionado la Probabilidad</mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <button class="btn btn-sm btn-light btn-round" (click)="tablaProbabilidad('RP')"> 
+                                        <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
+                                    </button>
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-sm btn-light btn-round" (click)="tablaProbabilidad('RP')"> 
-                                    <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
-                                </button>
+                            <div class="divider"></div>
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <mat-form-field>
+                                        <mat-label>Severidad</mat-label>
+                                        <mat-select [formControl]="riesgoPuroSControl" (selectionChange)="Criticidad()" required [(ngModel)]="consecuenciaModel.riesgoPuroS" #riesgoPuroS>
+    
+                                            <mat-option *ngFor="let item of severidadList" [value]="item.Id">{{item.Descripcion}}</mat-option>
+                                        </mat-select>
+                                        <mat-error *ngIf="riesgoPuroSControl.hasError('required')">No ha seleccionado la Severidad</mat-error>
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <button class="btn btn-sm btn-light btn-round" (click)="tablaSeveridad('RP')">
+                                        <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
+                                    </button>
+                                </div>
                             </div>
+    
                         </div>
-                        <div class="divider"></div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <mat-form-field>
-                                    <mat-label>Severidad</mat-label>
-                                    <mat-select [formControl]="riesgoPuroSControl" (selectionChange)="Criticidad()" required [(ngModel)]="consecuenciaModel.riesgoPuroS" #riesgoPuroS>
-
-                                        <mat-option *ngFor="let item of severidadList" [value]="item.Id">{{item.Descripcion}}</mat-option>
-                                    </mat-select>
-                                    <mat-error *ngIf="riesgoPuroSControl.hasError('required')">No ha seleccionado la Severidad</mat-error>
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-sm btn-light btn-round" (click)="tablaSeveridad('RP')">
-                                    <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
-                                </button>
-                            </div>
-                        </div>
-
-                        <input *ngFor="let item of criticidadLevel" type="text" readonly [value]="item.Id" [ngStyle]="{'background-color': item.Descripcion}">
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-xl-6">
-            <br />
-            <div><b>Riesgo residual</b>
-            </div>
-            <div class="box box-default">
-                <div class="box-body">
-                    <div class="form-group">
-                        <div class="row">
-                            <div class="col-md-9">
-                                <mat-form-field>
-                                    <mat-label>Probabilidad</mat-label>
-                                    <mat-select [formControl]="riesgoResidualPControl" disabled='true' [(ngModel)]="consecuenciaModel.riesgoResidualP" #riesgoResidualP>
-
-                                        <mat-option *ngFor="let item of probabilidadList" [value]="">{{item.Descripcion}}</mat-option>
-                                    </mat-select>
-                                    <!-- <mat-error *ngIf="riesgoResidualPControl.hasError('required')">No ha seleccionado la Probabilidad</mat-error> -->
-                                </mat-form-field>
+            <div class="col-xl-6">
+                <br />
+                <div><b>Riesgo residual</b>
+                </div>
+                <div class="box box-default">
+                    <div class="box-body">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <mat-form-field>
+                                        <mat-label>Probabilidad</mat-label>
+                                        <mat-select [formControl]="riesgoResidualPControl" disabled='true' [(ngModel)]="consecuenciaModel.riesgoPuroP" #riesgoResidualP>
+    
+                                            <mat-option *ngFor="let item of probabilidadList" [value]="">{{item.Descripcion}}</mat-option>
+                                        </mat-select>
+                                        <!-- <mat-error *ngIf="riesgoResidualPControl.hasError('required')">No ha seleccionado la Probabilidad</mat-error> -->
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <button class="btn btn-sm btn-light btn-round" type="" disabled='true' (click)="tablaProbabilidad('RR')">
+                                            <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
+                                        </button>
+                                </div>
                             </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-sm btn-light btn-round" type="" disabled='true' (click)="tablaProbabilidad('RR')">
-                                        <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
-                                    </button>
+                            <div class="divider"></div>
+                            <div class="row">
+                                <div class="col-md-9">
+                                    <mat-form-field>
+                                        <mat-label>Severidad</mat-label>
+                                        <mat-select [formControl]="riesgoResidualSControl" disabled='true' [(ngModel)]="consecuenciaModel.riesgoPuroS" (change)="Criticidad()" #riesgoResidualS>
+    
+                                            <mat-option *ngFor="let item of severidadList" [value]="">{{item.Descripcion}}</mat-option>
+                                        </mat-select>
+                                        <!-- <mat-error *ngIf="riesgoResidualSControl.hasError('required')">No ha seleccionado la Severidad</mat-error> -->
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-md-3">
+                                    <button class="btn btn-sm btn-light btn-round" disabled='true' (click)="tablaSeveridad('RR')">
+                                            <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
+                                        </button>
+                                </div>
                             </div>
+                            <!-- <input *ngFor="let item of criticidadLevel" type="text" readonly [value]="item.Id" [ngStyle]="{'background-color': item.Descripcion}"> -->
+    
+    
                         </div>
-                        <div class="divider"></div>
-                        <div class="row">
-                            <div class="col-md-9">
-                                <mat-form-field>
-                                    <mat-label>Severidad</mat-label>
-                                    <mat-select [formControl]="riesgoResidualSControl" disabled='true' [(ngModel)]="consecuenciaModel.riesgoResidualS" (change)="Criticidad()" #riesgoResidualS>
-
-                                        <mat-option *ngFor="let item of severidadList" [value]="">{{item.Descripcion}}</mat-option>
-                                    </mat-select>
-                                    <!-- <mat-error *ngIf="riesgoResidualSControl.hasError('required')">No ha seleccionado la Severidad</mat-error> -->
-                                </mat-form-field>
-                            </div>
-                            <div class="col-md-3">
-                                <button class="btn btn-sm btn-light btn-round" disabled='true' (click)="tablaSeveridad('RR')">
-                                        <img class="img-circle" src="assets/images/Edit.png" style="width: 10px; height: 10px;">
-                                    </button>
-                            </div>
-                        </div>
-                        <!-- <input *ngFor="let item of criticidadLevel" type="text" readonly [value]="item.Id" [ngStyle]="{'background-color': item.Descripcion}"> -->
-
-
                     </div>
                 </div>
             </div>
+
+            <div class="col-xl-12">
+
+                <input *ngFor="let item of criticidadLevel" type="text" readonly [value]="item.Id"  [ngStyle]="{'background-color': item.Descripcion}">
+
+            </div>
         </div>
-    </div>
-    <mat-dialog-actions align="end">
-        <button type="submit" class="btn-w-md mat-raised-button mat-primary" color="primary" md-raised-button="" ng-reflect-color="primary">
-                <span class="mat-button-wrapper">
-                <mat-icon mat-list-icon>save</mat-icon>
-                {{ data.button_confirm }}
-                </span>
-        </button>
-        <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
-    </mat-dialog-actions>
-</form>
+        <mat-dialog-actions align="end">
+            <button type="submit" class="btn-w-md mat-raised-button mat-primary" color="primary" md-raised-button="" ng-reflect-color="primary" (click)="guardar()">
+                    <span class="mat-button-wrapper">
+                    <mat-icon mat-list-icon>save</mat-icon>
+                    {{ data.button_confirm }}
+                    </span>
+            </button>
+            <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
+        </mat-dialog-actions>
+      </mat-step>
+</mat-horizontal-stepper>
+
+
