--- a/Matrizapp/src/app/AddPages/addrky/addrky.component.scss
+++ b/Matrizapp/src/app/AddPages/addrky/addrky.component.scss
@@ -36,22 +36,7 @@ h4{
    font-family:'collahuasi';
 }
 
-.mat-input-element {
 
-   font: inherit;
-   background: 0 0;
-   color: currentColor;
-   border: 1px solid black;
-   outline: 0;
-   padding: 0;
-   margin: 0;
-   width: 100%;
-   max-width: 100%;
-   vertical-align: bottom;
-   text-align: left;
-   padding-left: 10px;
-   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-}
 
 
 
@@ -63,3 +48,10 @@ h4{
    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  }
 
+ table {
+   width: 100%;
+ }
+ 
+ .example-chip-list {
+   width: 100%;
+ }
