--- a/Matrizapp/src/app/componentes/rkmain/rks/rks.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rks/rks.component.html
@@ -1,7 +1,10 @@
 <h6 class="article-title">
     Area > Proceso > Subproceso
-    <button *ngIf="subprocesoModel.subprocesoStatusId !=='008' && subprocesoModel.CanAdd==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
-
+    <!-- <button *ngIf="subprocesoModel.subprocesoStatusId !=='008' && subprocesoModel.CanAdd==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button> -->
+    <button *ngIf="(subprocesoModel.subprocesoStatusId ==='001'|| subprocesoModel.subprocesoStatusId ==='002'||subprocesoModel.subprocesoStatusId ==='006') &&subprocesoModel.CanAdd ==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)"><mat-icon mat-list-icon >dashboard</mat-icon>Dashboard</button>
+    <button *ngIf="(subprocesoModel.subprocesoStatusId ==='004'|| subprocesoModel.subprocesoStatusId ==='007') &&subprocesoModel.CanAdd ==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="Caja(subprocesoModel.key,subprocesoModel.subprocesoStatusId)">Editar</button>
+    <button *ngIf="(subprocesoModel.subprocesoStatusId ==='004') &&subprocesoModel.CanAdd ==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(subprocesoModel.key,subprocesoModel.subprocesoStatusId,'IV')">Validar</button>
+    <button *ngIf="( subprocesoModel.subprocesoStatusId ==='007') &&subprocesoModel.CanAdd ==='true' " mat-button class="mat-button header-btn" myOpenSearchOverlay style="float: right; " (click)="enviarAvalidar(subprocesoModel.key,subprocesoModel.subprocesoStatusId,'IA')">Aprobar</button>
 </h6>
 
 
