--- a/Matrizapp/src/app/componentes/rkmain/rkycblando/rkycblando.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/rkycblando/rkycblando.component.html
@@ -1,46 +1,59 @@
-<h1 mat-dialog-title>{{ data.title }}</h1>
+
+<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>{{ data.title }}</h1>
 <mat-dialog-content>
-    <!-- <mat-form-field>
-        <input matInput type="text" name="areaId" placeholder="areaId" #areaId readonly="true" value="{{data.areaId}}" [(ngModel)]="cBlandoModel.areaId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="procesoId" placeholder="procesoId" #procesoId readonly="true" value="{{data.procesoId}}" [(ngModel)]="cBlandoModel.procesoId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="subprocesoId" placeholder="subprocesoId" #subprocesoId readonly="true" value="{{data.subprocesoId}}" [(ngModel)]="cBlandoModel.subprocesoId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="actividadId" placeholder="actividadId" #actividadId readonly="true" value="{{data.actividadId}}" [(ngModel)]="cBlandoModel.actividadId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="tareaId" placeholder="tareaId" #tareaId readonly="true" value="{{data.tareaId}}" [(ngModel)]="cBlandoModel.tareaId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="dimensionId" placeholder="dimensionId" #dimensionId readonly="true" value="{{data.dimensionId}}" [(ngModel)]="cBlandoModel.dimensionId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="riesgoId" placeholder="riesgoId" #riesgoId readonly="true" value="{{data.riesgoId}}" [(ngModel)]="cBlandoModel.riesgoId"/>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="consecuenciaId" placeholder="consecuenciaId" #consecuenciaId readonly="true" value="{{data.consecuenciaId}}" [(ngModel)]="cBlandoModel.consecuenciaId"/>
-    </mat-form-field> -->
-    <mat-form-field>
-        <!-- <mat-label>Seleccione un Control</mat-label> -->
-        <mat-select [(ngModel)]="cBlandoModel.cblandoId" aria-placeholder="Seleccione un Control" #cblandoId multiple>
-            <!-- <input matInput (keydown)="Buscar($event)" type="text" [(ngModel)]="cBlandoModel.name" value={{cBlandoModel.name}} name='name' placeholder="search"> -->
-            <mat-option style="height: 50px !important;">
-
-                <ngx-mat-select-search [placeholderLabel]="'Buscar'" [noEntriesFoundLabel]="'Not Found...'" [(ngModel)]="descripcion" name="descripcion"></ngx-mat-select-search>
-            </mat-option>
-
-            <mat-option *ngFor="let item of cBlandosList |  filterPipe:descripcion" [value]="item.Id">{{item.Descripcion}}</mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-        <input matInput type="text" name="cblandoId" placeholder="Control Blando" #stdJobNo [(ngModel)]="cBlandoModel.cblandoId" readonly="true" />
-    </mat-form-field>
+    <div class="row">
+        <div class="col-xl-12">
+            <mat-form-field class="example-chip-list">
+    
+                <mat-chip-list #chipList>
+                    <mat-chip *ngFor="let fruit of controlesBListSeleccionadas" [selectable]="true"
+                             [removable]="removable" (removed)="remove(fruit)">
+                      {{fruit.Descripcion}}
+                      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+                    </mat-chip>
+                </mat-chip-list>
+            </mat-form-field>
+        </div>
+        <div class="col-xl-12">
+        
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter" [disabled]="bloquearFiltro">
+    
+        </mat-form-field>
+        <mat-progress-bar *ngIf="isLoading" style="width: 100%" mode="buffer"></mat-progress-bar>
+        <div class="box box-default table-box table-responsive mdl-shadow--2dp" style="height: 270px;">
+            <table mat-table [dataSource]="datasource" class="mat-elevation-z4">
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+        
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox [(ngModel)]="row.selected" (change)="seleccionar(row.Id)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
+                <ng-container matColumnDef="Id">
+                    <th mat-header-cell *matHeaderCellDef>Codigo</th>
+                    <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                </ng-container>
+                <ng-container matColumnDef="Descripcion">
+                    <th mat-header-cell *matHeaderCellDef> Descripcion</th>
+                    <td mat-cell *matCellDef="let element">{{element.Descripcion}}</td>
+                </ng-container>
+        
+                <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+                <tr mat-row *matRowDef="let row; columns:columnas"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[10]" (page)="pageEvents($event)"></mat-paginator>
+        </div>
+        
+        </div>
+    </div>
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-    <button mat-raised-button color="primary" (click)="guardar()">{{ data.button_confirm }}</button>
-    <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
-</mat-dialog-actions>
+
+    <mat-dialog-actions align="end">
+        <button mat-raised-button color="primary" (click)="guardar()">{{ data.button_confirm }}</button>
+        <button mat-raised-button color="warn" (click)="cancelar()">{{ data.button_close }}</button>
+    </mat-dialog-actions>
+
+
