modificacion servicios para detalle de consecuencia, inclusion de nuevos botones para validar

--- a/Matrizapp/src/app/rkmain/cajasdashboard/cajasdashboard.component.html
+++ b/Matrizapp/src/app/rkmain/cajasdashboard/cajasdashboard.component.html
@@ -1,81 +1,41 @@
+<mat-dialog-content>
 
-
-
-<div class="box box-default" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle *ngIf="mostrar">
-    <div class="box-body">
-        <div class="form-group">
-            <div class="row">
-                <div class="col-xl-12 text-center">
-                    <h4>Transacciones pendientes </h4>
-                    <!-- {{prueba}} -->
-                </div>
-                <div class="col-xl-2"></div>
-                <div class="col-xl-4 text-center">
-                    <div class="card bg-color-warning ">
-                        <a class='pasos'>Paso 1</a>
-                        <div class="card-content">
-                            <span class="card-title " style="color: black; font-size: 30px;">{{dashboardData.ENVIAR_A_VALIDAR}}</span>
-
-                            <!-- <p style="font-weight: bold"><a style="color: black; font-size: 13px; font-weight: bold;" [routerLink]="" (click)="VerEnviarValidar()">ITEMS PENDIENTES ENVIAR A VALIDAR -->
-                            <p style="font-weight: bold"><a style="color: black; font-size: 13px; font-weight: bold;" [routerLink]="" >ITEMS PENDIENTES ENVIAR A VALIDAR
-  
-          </a>
-                            </p>
-
-                            <p style="font-weight: bold">ITEMS EN CONSTRUCCION {{dashboardData.ENVIAR_A_VALIDAR_CONSTRUCCION}}</p>
-                            <!-- <a style="font-size: 11px;">(Items en fase de creación, modificación o borrado)</a> -->
-                        </div>
-                        <div>
-                            <button (click)="enviarAvalidar()">Enviar</button>
-                            <button (click)="VerEnviarValidar()">Editar</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-4 text-center">
-                    <div class="card bg-color-success">
-                        <!-- <a class='pasos'>Paso 2</a> -->
-                        <div class="card-content">
-                            <span class="card-title" style="color: black; font-size: 30px;">{{dashboardData.RECHAZADO}}</span>
-                            <p><a style="color: black; font-size: 13px;" [routerLink]="" (click)="VerEnviarAprobar()"> ITEMS RECHAZADOS</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-2"></div>
-
-                <!-- <div class="col-xl-2"></div>
-                <div class="col-xl-4 text-center">
-                    <div class="card bg-color-success">
-                        <div class="card-content">
-                            <span class="card-title" style="color: black; font-size: 30px;">{{dashboardData.Rechazados}}</span>
-                            <p><a style="color: black; font-size: 13px;" (click)="VerEnviarAprobar()"> ITEMS RECHAZADOS
-            
-
-        </a>
-                            </p>
-
-                        </div>
-                    </div>
-                </div> -->
-                <!-- <div class="col-xl-4 text-center">
-                    <div class="card bg-color-info ">
-                        <a class='pasos'>Paso 3</a>
-                        <div class="card-content">
-                            <span class="card-title" style="color: black; font-size: 30px;">{{dashboardData.POR_APROBAR}}</span>
-                            <p><a style="color: black; font-size: 13px;" (click)="VerPorAprobar()">ITEMS PENDIENTES POR APROBAR</a></p>
-
-                        </div>
-                    </div>
-                </div> -->
+    <div class="container" cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>
+        <div class="row">
+            <div class="col-xl-12 text-center">
+                <h4>Transacciones pendientes </h4>
             </div>
+          <div class="col-xl-6">
+            <div class="card text-center bg-warning">
+            <div class="card-body">
+
+              <h5 class="">{{dashboardData.ENVIAR_A_VALIDAR}} ITEMS PENDIENTES ENVIAR A VALIDAR</h5>
+                                      
+              
+            <button class="btn btn-primary btn-sm "  (click)="enviarAvalidar()">Enviar</button>
+            <button class="btn btn-secondary btn-sm ml-5" (click)="VerEnviarValidar()">Revisar Items</button>
+            <hr>
+            <h5 class=" mt-9" (click)="VerEnviarValidar(true)">{{dashboardData.ENVIAR_A_VALIDAR_CONSTRUCCION}} ITEMS EN CONSTRUCCION</h5>
+             </div>
+            </div>
+
+          </div>
+          
+          <div class="col-xl-6">
+            <div class="card text-center bg-success">
+            <div class="card-body">
+              <h5 class="" (click)="VerEnviarAprobar()">{{dashboardData.RECHAZADO}} ITEMS RECHAZADOS</h5>
+                                      <!-- <p class="card-text">ITEMS PENDIENTES ENVIAR A VALIDAR</p> -->
+              
+           
+            
         </div>
-        <mat-dialog-actions align="end">
-            <!-- <button type="submit" class="btn-w-md mat-raised-button mat-primary" color="primary" md-raised-button="" ng-reflect-color="primary">
-                        <span class="mat-button-wrapper">
-                        <mat-icon mat-list-icon>save</mat-icon>
-                        {{ data.button_confirm }}
-                        </span>
-                </button> -->
-            <button mat-raised-button color="warn" (click)="cancelar()">Cerrar</button>
-        </mat-dialog-actions>
-    </div>
+        </div>
+          </div>
+        </div>  
+        </div>
+        
+        
+
+
+</mat-dialog-content>
