--- a/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
+++ b/Matrizapp/src/app/componentes/rkmain/notificaciones/notificaciones.component.html
@@ -13,6 +13,7 @@
                 <th class="sticky-top"><b>Estado</b></th>
                 <th class="sticky-top"><b>Acción</b></th>
                 <th class="sticky-top"><b>Items</b></th>
+                <th class="sticky-top"><b>Avance</b></th>
                 <th class="sticky-top "><b id='check'>Eliminar</b></th>
 
 
@@ -30,6 +31,7 @@
                 <td>{{getText(notificacion.comentario)}}</td>
                 <td>{{notificacion.estado}}</td>
                 <td>{{notificacion.no_items}}</td>
+                <!-- <td>{{notificacion.avance}}</td> -->
 
                 <td style="align-items: center; text-align: center;">
                     <input type="checkbox" [value]="notificacion.check" style="align-items: center; text-align: center;" [(ngModel)]="notificacion.check" [disabled]='notificacion.habilitado'>
