se añade funcionalidad para listar todos los items mediante los botines de siguiente

--- a/Matrizapp/src/app/rkmain/cajasdashboard/cajasdashboard.component.html
+++ b/Matrizapp/src/app/rkmain/cajasdashboard/cajasdashboard.component.html
@@ -15,7 +15,7 @@
             <button class="btn btn-primary btn-sm "  (click)="enviarAvalidar()">Enviar</button>
             <button class="btn btn-secondary btn-sm ml-5" (click)="VerEnviarValidar()">Revisar Items</button>
             <hr>
-            <h5 class=" mt-9" (click)="VerEnviarValidar(true)">{{dashboardData.ENVIAR_A_VALIDAR_CONSTRUCCION}} ITEMS EN CONSTRUCCION</h5>
+            <button class="btn btn-outline-dark btn-sm mt-9 creacion" (click)="VerEnviarValidar(true)">{{dashboardData.ENVIAR_A_VALIDAR_CONSTRUCCION}} ITEMS EN CONSTRUCCION</button>
              </div>
             </div>
 
