--- a/Matrizapp/src/app/AddPages/addrky/addrky.component.html
+++ b/Matrizapp/src/app/AddPages/addrky/addrky.component.html
@@ -45,7 +45,7 @@
                     <tr mat-header-row *matHeaderRowDef="columnas"></tr>
                     <tr mat-row *matRowDef="let row; columns:columnas"></tr>
                 </table>
-                <mat-paginator [pageSizeOptions]="[10]" ></mat-paginator>
+                <mat-paginator [pageSizeOptions]="[10]" (page)="pageEvents($event)" ></mat-paginator>
             </div>
             <!-- <div mat-dialog-actions align="end">
                 <button mat-icon-button color="accent" *ngIf="areasListSeleccionadas.length > 0" matStepperNext>
